--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "mastra dev",
     "build": "mastra build",
     "start": "mastra start",
-    "test:food": "tsx src/scripts/test-food.ts"
+    "test:food": "tsx src/scripts/test-food.ts",
+    "dev:worker": "wrangler dev",
+    "deploy": "wrangler deploy"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +31,7 @@
     "@types/node": "^24.10.0",
     "mastra": "^0.18.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "wrangler": "^3.78.0"
   }
 }
