--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@
 name = "mastra-food-app"
 main = "src/worker.ts"
 compatibility_date = "2024-11-11"
+compatibility_flags = ["nodejs_compat"]
 
 [observability]
 enabled = true
