--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,12 @@
 # Cloudflare Workers 配置
 name = "mastra-food-app"
 main = "src/worker.ts"
-compatibility_date = "2024-11-11"
+compatibility_date = "2025-11-11"
 compatibility_flags = ["nodejs_compat"]
 
 [observability]
 enabled = true
+
+
+# ✅ 启用 Node.js 兼容模式
+node_compat = true
