build(wrangler): 添加构建配置并启用Node.js兼容模式
添加构建命令和静态资源目录配置
启用Node.js兼容模式以支持相关功能

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,12 @@ main = "src/worker.ts"
 compatibility_date = "2025-11-11"
 compatibility_flags = ["nodejs_compat"]
 
+# ✅ 启用 Node.js 兼容模式
+node_compat = true
+
 [observability]
 enabled = true
 
-
-# ✅ 启用 Node.js 兼容模式
-node_compat = true
+[build]
+command = "pnpm install && pnpm run build"
+assets = { directory = "./dist" }
