--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@mastra/libsql": "^0.16.2",
     "@mastra/loggers": "^0.10.19",
     "@mastra/memory": "^0.15.11",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "stream-browserify": "^3.0.0",
+    "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
