--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "stream/web": ["./src/polyfills/stream-web"]
+    }
   },
   "include": [
     "src/**/*"
