--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,15 @@
 # Cloudflare Workers 配置
 name = "mastra-food-app"
 main = "src/worker.ts"
-compatibility_date = "2025-11-11"
+compatibility_date = "2024-11-11"
 compatibility_flags = ["nodejs_compat"]
-
-# ✅ 启用 Node.js 兼容模式
-node_compat = true
 
 [observability]
 enabled = true
+
+# 静态资源（如将构建产物或额外文件打包）
+[assets]
+directory = "./dist"
 
 [build]
 command = "pnpm install && pnpm run build"
