build: 更新wrangler.toml中的构建配置
将assets配置注释掉并添加新的upload配置，以支持模块格式的worker部署

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,4 +13,5 @@ directory = "./dist"
 
 [build]
 command = "pnpm install && pnpm run build"
-assets = { directory = "./dist" }
+# assets = { directory = "./dist" }
+upload = { format = "modules", dir = "./dist", main = "worker.js", rules = [] }
