--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "@mastra/libsql": "^0.16.2",
     "@mastra/loggers": "^0.10.19",
     "@mastra/memory": "^0.15.11",
-    "zod": "^4.1.12",
     "stream-browserify": "^3.0.0",
-    "web-streams-polyfill": "^4.0.0"
+    "web-streams-polyfill": "^4.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
     "mastra": "^0.18.0",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
-    "wrangler": "^3.78.0"
+    "wrangler": "^4.47.0"
   }
 }
