--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,19 @@
 # Cloudflare Workers 配置
 name = "mastra-food-app"
-main = "src/worker.ts"
-compatibility_date = "2024-11-11"
-compatibility_flags = ["nodejs_compat"]
+# 指向 Mastra 输出的入口文件
+main = ".mastra/output/index.mjs"
+compatibility_date = "2025-11-11"
+node_compat = true
 
 [observability]
 enabled = true
 
-# 静态资源（如将构建产物或额外文件打包）
-[assets]
-directory = "./dist"
-
 [build]
+# 保留你的构建命令（Mastra 会生成 .mastra/output）
 command = "pnpm install && pnpm run build"
-# assets = { directory = "./dist" }
-upload = { format = "modules", dir = "./dist", main = "worker.js", rules = [] }
+
+# instruct Wrangler to upload the already-built modules from .mastra/output
+[upload]
+format = "modules"
+dir = ".mastra/output"
+main = "index.mjs"
