--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,10 @@ compatibility_flags = ["nodejs_compat"]
 
 [observability]
 enabled = true
+
+# 环境变量配置
+# 注意：在部署前需要通过以下命令设置 secret：
+# wrangler secret put OPENAI_API_KEY
+# 或者在 Cloudflare Dashboard 中配置
+[vars]
+# 公开的环境变量可以放在这里
